--- a/src/app/ticket/comment-form/comment-form.component.html
+++ b/src/app/ticket/comment-form/comment-form.component.html
@@ -3,16 +3,16 @@
       <mat-card-header>
         <mat-card-title>Submit Comment</mat-card-title>
       </mat-card-header>
-  
+
       <mat-card-content>
         <div class="row">
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Comment</mat-label>
                 <textarea matInput formControlName="comment" rows="4"></textarea>
-                <mat-error *ngIf="commentForm.get('comment').hasError('required')">
+                <mat-error *ngIf="commentForm.get('comment')!.hasError('required')">
                   Comment is required.
                 </mat-error>
-                <mat-error *ngIf="commentForm.get('comment').hasError('maxlength')">
+                <mat-error *ngIf="commentForm.get('comment')!.hasError('maxlength')">
                   Comment cannot exceed 1000 characters.
                 </mat-error>
               </mat-form-field>
@@ -23,7 +23,7 @@
                 <mat-form-field appearance="outline" class="full-width" style="width: 100%;">
                     <mat-label>Ticket ID</mat-label>
                     <input matInput type="number" formControlName="ticket" />
-                    <mat-error *ngIf="commentForm.get('ticket').hasError('required')">
+                    <mat-error *ngIf="commentForm.get('ticket')!.hasError('required')">
                       Ticket ID is required.
                     </mat-error>
                   </mat-form-field>
@@ -32,14 +32,14 @@
                 <mat-form-field appearance="outline" class="full-width" style="width: 100%       ;" >
                     <mat-label>Commented By (Employee ID)</mat-label>
                     <input matInput type="number" formControlName="commented_by" />
-                    <mat-error *ngIf="commentForm.get('commented_by').hasError('required')">
+                    <mat-error *ngIf="commentForm.get('commented_by')!.hasError('required')">
                       Commented By is required.
                     </mat-error>
                   </mat-form-field>
             </div>
-        </div>  
+        </div>
       </mat-card-content>
-  
+
       <mat-card-actions>
        <button mat-raised-button color="primary" type="submit" [disabled]="commentForm.invalid">
         <i class="fas fa-save mr-2"></i> Submit
@@ -48,4 +48,3 @@
       </mat-card-actions>
     </mat-card>
   </form>
-  
