--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -2,34 +2,31 @@
   <div class="filters">
     <mat-form-field appearance="outline" class="search-field">
       <mat-label>Search Tickets</mat-label>
-      <input matInput [formControl]="searchControl" placeholder="Search by title or description">
+      <input matInput [formControl]="searchControl" placeholder="Search by title, description, or category">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Status</mat-label>
       <mat-select [formControl]="statusFilter">
-        <mat-option value="">All</mat-option>
-        <mat-option value="Open">Open</mat-option>
-        <mat-option value="In Progress">In Progress</mat-option>
-        <mat-option value="Resolved">Resolved</mat-option>
-        <mat-option value="Closed">Closed</mat-option>
+        <mat-option *ngFor="let option of statusOptions" [value]="option.value">
+          {{option.label}}
+        </mat-option>
       </mat-select>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Priority</mat-label>
       <mat-select [formControl]="priorityFilter">
-        <mat-option value="">All</mat-option>
-        <mat-option value="High">High</mat-option>
-        <mat-option value="Medium">Medium</mat-option>
-        <mat-option value="Low">Low</mat-option>
+        <mat-option *ngFor="let option of priorityOptions" [value]="option.value">
+          {{option.label}}
+        </mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
   <div class="actions">
-    <button mat-raised-button color="primary" [routerLink]="['/ticket/list']">
+    <button mat-raised-button color="primary" (click)="openTicketcreation(null)">
       <mat-icon>add</mat-icon>
       Create Ticket
     </button>
@@ -82,7 +79,6 @@
           <mat-icon>visibility</mat-icon>
           View
         </button>
-        <!-- [routerLink]="['/ticket', ticket.id, 'edit']" -->
         <button mat-button color="accent" (click)="openTicketcreation(ticket)">
           <mat-icon>edit</mat-icon>
           Edit
