--- a/src/app/ticket/ticket-generation-form/ticket-generation-form.component.html
+++ b/src/app/ticket/ticket-generation-form/ticket-generation-form.component.html
@@ -157,7 +157,7 @@
         mat-stroked-button
         type="button"
         (click)="cancel()">
-        <mat-icon>close</mat-icon>   //milind
+        <mat-icon>close</mat-icon>
         Cancel
       </button>
       <button
