--- a/src/app/organization/departmentlist/departmentlist.component.html
+++ b/src/app/organization/departmentlist/departmentlist.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group>
-    <mat-tab label="Create Department"> 
+    <mat-tab label="Create Department">
         <app-department ></app-department>
     </mat-tab>
     <mat-tab label="Department List">
@@ -14,7 +14,7 @@
                 <mat-icon matSuffix>search</mat-icon>
               </mat-form-field> -->
             <mat-card-content>
-               
+
               <!-- <input matInput placeholder="Search" (keyup)="applyFilter($event)"/> -->
               <div class="col-md-4">
                 <mat-form-field>
@@ -24,10 +24,10 @@
                     <button mat-button matSuffix mat-icon-button *ngIf="filterText" (click)="clearFilter()">
                         <mat-icon>clear</mat-icon>
                     </button>
-    
+
                 </mat-form-field>
                 <!-- src="../../../assets/images/enter.png" -->
-                <img alt="" *ngIf="filterText" (click)="sea(filterText)" style="width: 24px;
+                <img alt="" *ngIf="filterText" (click)="filter(filterText)" style="width: 24px;
                 height: 24px;
                 background: #e8e8e8;
                 border-radius: 16px;
@@ -54,7 +54,7 @@
                   <td mat-cell *matCellDef="let branch"> {{branch.description}} </td>
                 </ng-container> -->
 
-               
+
 
                 <ng-container matColumnDef="actions">
                   <th mat-header-cell *matHeaderCellDef> Actions </th>
@@ -62,11 +62,11 @@
                     <button mat-icon-button color="primary" (click)="editBranch(department.id)">
                         <mat-icon>edit</mat-icon>
                       </button>
-                    
+
                       <button mat-icon-button color="warn" (click)="deleteBranch(department.id)">
                         <mat-icon>delete</mat-icon>
                       </button>
-                     
+
                   </td>
                 </ng-container>
 
@@ -78,5 +78,5 @@
           </mat-card>
         </div>
     </mat-tab>
-    
+
 </mat-tab-group>
