--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -10,7 +10,7 @@
       <a mat-button routerLink="/dashboard" routerLinkActive="active-link">
         <mat-icon>home</mat-icon> Dashboard
       </a>
-      <a mat-button routerLink="/organization/department" routerLinkActive="active-link">
+      <!-- <a mat-button routerLink="/organization/department" routerLinkActive="active-link">
         <mat-icon>people</mat-icon> Department
       </a>
       <a mat-button routerLink="/organization/designation" routerLinkActive="active-link">
@@ -18,7 +18,7 @@
       </a>
       <a mat-button routerLink="/organization/branch" routerLinkActive="active-link">
         <mat-icon>store</mat-icon> Branch
-      </a>
+      </a> -->
       <a mat-button routerLink="/lead/lead-list" routerLinkActive="active-link">
         <mat-icon>assignment</mat-icon> Lead List
       </a>
