--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -25,14 +25,15 @@
       <a mat-button routerLink="/followup/follow-up-list" routerLinkActive="active-link">
         <mat-icon>check_circle</mat-icon> Follow-Up List
       </a>
-      <a mat-button routerLink="/ticket/ticket" routerLinkActive="active-link">
-        <mat-icon>confirmation_number</mat-icon> Ticket Generation      </a>
+      <!-- <a mat-button routerLink="/ticket/ticket" routerLinkActive="active-link">
+        <mat-icon>confirmation_number</mat-icon> Ticket Generation
+      </a> -->
       <a mat-button routerLink="/ticket/list" routerLinkActive="active-link">
         <mat-icon>format_list_bulleted</mat-icon> Ticket List
       </a>
-      <a mat-button routerLink="/ticket/comment-form" routerLinkActive="active-link">
+      <!-- <a mat-button routerLink="/ticket/comment-form" routerLinkActive="active-link">
         <mat-icon>comment</mat-icon> Comment
-      </a>
+      </a> -->
       <a mat-button routerLink="/app-sidebar" routerLinkActive="active-link">
         <mat-icon>settings</mat-icon> Settings
       </a>
